# jobcrawler

./: .gitignore  .lite-project.lua  README.md  add_credits.py  add_user.py  clients.py  config.py  crawl_boards.py  crawl_jobs.py  db.py  flask_app.py  get_new_boards.py  ingest_boards.py  loc_utils.py  location_lookup.txt  match_demo.py  ml_utils.py  parsers.py  pyproject.toml  recrawl_jobs.py  storage_utils.py  vec_migrate.py  web_app.py  web_utils.py
routes/: applied.py  credit_use_log.py  custom_resumes.py  customize_resume.py  download_custom_resume.py  google_login_callback.py  google_login_start.py  home.py  job_expired.py  job_page.py  location_autocomplete.py  login.py  logout.py  mark_applied.py  mark_unapplied.py  profile.py  raw_pdf_resume.py  star_job.py  starred.py  unstar_job.py  upload_resume.py
static/css/: landing.css  style.css
templates/: _shell.html  applied.html  credit_use_log.html  custom_resume.html  custom_resumes.html  home.html  job_expired.html  job_page.html  landing.html  login.html  profile.html  resume_pdf.html  starred.html
templates/components/: job_feed_filters.html  job_link_card.html  job_page_actions.html
