[project]
name = "jobcrawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "extruct>=0.18.0",
    "fire>=0.7.1",
    "flask>=3.1.3",
    "flask-wtf>=1.2.2",
    "google-api-python-client>=2.193.0",
    "google-auth-oauthlib>=1.3.1",
    "gunicorn>=25.3.0",
    "html5lib>=1.1",
    "idli>=0.2.2",
    "markitdown[pdf]>=0.1.5",
    "niquests>=3.17.0",
    "numpy>=2.4.2",
    "openai>=2.31.0",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.3",
]

[dependency-groups]
dev = [
    "python-lsp-server>=1.14.0",
]
